add tutorials for the new SectionItems functionality
You can now directly assign values to HeaderItems - see the tutorial
notebooks.
attributes.ipynb -> notebooks/basic example of reading a LAS file.ipynb
LAS file.ipynb

--- a/notebooks/basic example of reading a LAS file.ipynb
+++ b/notebooks/basic example of reading a LAS file.ipynb
@@ -4,66 +4,79 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Reading in data"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The ``las_reader.read()`` function accepts a filename, string, URL, or file-like object and returns a ``LASFile`` object:"
+    "Everything in ``lasio`` is available from a basic import, so all you need to do is:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 26,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "import os\n",
-    "\n",
     "import lasio"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The ``read()`` function accepts a filename, string, URL, or file-like object"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "\n",
+    "l = lasio.read(os.path.join(\"..\", \"tests\", \"examples\", \"6038187_v1.2_short.las\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "it returns a ``LASFile`` object"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'lasio.las.LASFile'>\n"
-     ]
+     "data": {
+      "text/plain": [
+       "lasio.las.LASFile"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "l = lasio.read(os.path.join(\"..\", \"tests\", \"examples\", \"6038187_v1.2.las\"))\n",
-    "print(type(l))"
+    "type(l)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Curve data"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Curves are available as ``numpy.ndarray`` objects as items in the ``Las`` object itself:"
+    "Curves are available as [numpy](http://www.numpy.org/) 1D arrays"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -74,7 +87,7 @@
        "['DEPT', 'CALI', 'DFAR', 'DNEAR', 'GAMN', 'NEUT', 'PR', 'SP', 'COND']"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -84,8 +97,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "so to see the NEUT data use:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -94,10 +114,30 @@
     {
      "data": {
       "text/plain": [
-       "array([ nan,  nan,  nan, ...,  nan,  nan,  nan])"
+       "array([ 1152.01 ,  1233.99 ,  1212.   ,  1161.01 ,  1080.02 ,  1188.98 ,\n",
+       "        1164.   ,  1169.   ,  1202.   ,  1168.01 ,  1179.   ,  1146.   ,\n",
+       "        1169.   ,  1182.   ,  1156.01 ,  1154.   ,  1142.   ,  1146.   ,\n",
+       "        1171.   ,  1119.01 ,  1070.01 ,  1150.99 ,  1256.98 ,  1291.   ,\n",
+       "        1301.   ,  1371.99 ,  1358.   ,  1368.   ,  1482.99 ,  1423.01 ,\n",
+       "        1350.01 ,  1156.02 ,  1013.03 ,   876.016,   798.016,   629.026,\n",
+       "         618.001,   659.992,   689.997,   765.984,   753.002,   741.001,\n",
+       "         734.001,   767.996,   730.008,   747.997,   762.999,   793.994,\n",
+       "         776.002,   854.983,   827.004,   886.994,   869.003,   863.001,\n",
+       "         869.999,   884.998,   919.997,   879.008,   909.996,   931.995,\n",
+       "         954.996,   986.997,   970.003,   953.002,   925.006,   899.004,\n",
+       "         952.995,   967.997,   926.005,   924.   ,   936.998,   968.997,\n",
+       "         922.009,   934.999,   931.001,   945.998,   913.003,   903.002,\n",
+       "         964.993,   937.006,   925.002,   909.001,   920.998,   924.   ,\n",
+       "         906.004,   980.989,   949.002,   908.008,   899.001,   934.992,\n",
+       "         956.997,   969.999,   954.003,   933.002,  1023.98 ,   950.011,\n",
+       "        1002.   ,  1030.99 ,  1074.   ,  1161.98 ,  1113.01 ,  1051.   ,\n",
+       "        1067.   ,  1167.99 ,  1312.97 ,  1478.97 ,  1536.   ,  1584.99 ,\n",
+       "        1592.   ,  1483.02 ,  1557.99 ,  1546.   ,  1604.99 ,  1546.01 ,\n",
+       "        1518.01 ,  1469.01 ,  1438.   ,  1403.01 ,  1413.   ,  1316.02 ,\n",
+       "        1347.   ])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -110,49 +150,98 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You can also access curves by index (remembering that the first index is zero but the first curve is the depth)."
+    "You can also access curves by index (remembering that the first index is zero but the first curve is the reference curve, usually depth.\n",
+    "\n",
+    "So for example the first data curve in this file is CALI:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[     nan -2324.28 -2324.28 ...,      nan      nan      nan]\n",
-      "[ 4.587  4.587  4.587 ...,    nan    nan    nan]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "array([ 101.78 ,  101.738,  101.738,  101.858,  101.798,  101.756,\n",
+       "        101.804,  101.798,  101.852,  101.87 ,  101.906,  101.816,\n",
+       "        101.714,  101.768,  101.816,  101.828,  101.696,  101.69 ,\n",
+       "        101.744,  101.66 ,  101.6  ,  101.708,  101.78 ,  101.792,\n",
+       "        101.618,  101.576,  101.606,  101.504,  101.516,  101.54 ,\n",
+       "        101.546,  101.45 ,  101.612,  101.744,  101.762,  101.762,\n",
+       "        101.792,  101.816,  101.696,  101.696,  101.666,  101.69 ,\n",
+       "        101.858,  101.81 ,  101.792,  101.828,  101.81 ,  101.54 ,\n",
+       "        101.54 ,  101.516,  101.516,  101.498,  101.504,  101.54 ,\n",
+       "        101.348,  101.366,  101.42 ,  101.408,  101.36 ,  101.318,\n",
+       "        101.324,  101.348,  101.307,  101.283,  101.378,  101.295,\n",
+       "        101.283,  101.396,  101.36 ,  101.372,  101.348,  101.408,\n",
+       "        101.402,  101.498,  101.432,  101.516,  101.594,  101.528,\n",
+       "        101.534,  101.528,  101.528,  101.528,  101.66 ,  101.732,\n",
+       "        101.696,  101.714,  101.696,  101.66 ,  101.666,  101.78 ,\n",
+       "        101.72 ,  101.624,  101.696,  101.696,  101.684,  101.708,\n",
+       "        101.69 ,  101.69 ,  101.762,  101.84 ,  101.636,  101.612,\n",
+       "        101.576,  101.618,  101.492,  102.715,  101.157,  101.432,\n",
+       "        101.636,  101.594,  101.474,  101.546,  101.366,  101.318,\n",
+       "        101.384,  101.384,  101.295,  101.223,  101.241,  101.235,  101.259])"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(l['GAMN'])\n",
-    "print(l[2])"
+    "l['CALI']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "which is the same as using the index 1:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[     nan -116.998 -116.998 ...,      nan      nan      nan]\n",
-      "[     nan -116.998 -116.998 ...,      nan      nan      nan]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "array([ 101.78 ,  101.738,  101.738,  101.858,  101.798,  101.756,\n",
+       "        101.804,  101.798,  101.852,  101.87 ,  101.906,  101.816,\n",
+       "        101.714,  101.768,  101.816,  101.828,  101.696,  101.69 ,\n",
+       "        101.744,  101.66 ,  101.6  ,  101.708,  101.78 ,  101.792,\n",
+       "        101.618,  101.576,  101.606,  101.504,  101.516,  101.54 ,\n",
+       "        101.546,  101.45 ,  101.612,  101.744,  101.762,  101.762,\n",
+       "        101.792,  101.816,  101.696,  101.696,  101.666,  101.69 ,\n",
+       "        101.858,  101.81 ,  101.792,  101.828,  101.81 ,  101.54 ,\n",
+       "        101.54 ,  101.516,  101.516,  101.498,  101.504,  101.54 ,\n",
+       "        101.348,  101.366,  101.42 ,  101.408,  101.36 ,  101.318,\n",
+       "        101.324,  101.348,  101.307,  101.283,  101.378,  101.295,\n",
+       "        101.283,  101.396,  101.36 ,  101.372,  101.348,  101.408,\n",
+       "        101.402,  101.498,  101.432,  101.516,  101.594,  101.528,\n",
+       "        101.534,  101.528,  101.528,  101.528,  101.66 ,  101.732,\n",
+       "        101.696,  101.714,  101.696,  101.66 ,  101.666,  101.78 ,\n",
+       "        101.72 ,  101.624,  101.696,  101.696,  101.684,  101.708,\n",
+       "        101.69 ,  101.69 ,  101.762,  101.84 ,  101.636,  101.612,\n",
+       "        101.576,  101.618,  101.492,  102.715,  101.157,  101.432,\n",
+       "        101.636,  101.594,  101.474,  101.546,  101.366,  101.318,\n",
+       "        101.384,  101.384,  101.295,  101.223,  101.241,  101.235,  101.259])"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(l[\"COND\"])\n",
-    "print(l[-1])"
+    "l[1]"
    ]
   },
   {
@@ -164,35 +253,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(2732, 9)\n",
-      "[[  5.00000000e-02   4.97650000e+01   4.58700000e+00 ...,              nan\n",
-      "               nan              nan]\n",
-      " [  1.00000000e-01   4.97650000e+01   4.58700000e+00 ...,   1.15508000e+02\n",
-      "   -3.04900000e+00  -1.16998000e+02]\n",
-      " [  1.50000000e-01   4.97650000e+01   4.58700000e+00 ...,   1.15508000e+02\n",
-      "   -3.04900000e+00  -1.16998000e+02]\n",
-      " ..., \n",
-      " [  1.36500000e+02   4.85550000e+01              nan ...,              nan\n",
-      "               nan              nan]\n",
-      " [  1.36550000e+02   4.84380000e+01              nan ...,              nan\n",
-      "               nan              nan]\n",
-      " [  1.36600000e+02  -5.62750000e+01              nan ...,              nan\n",
-      "               nan              nan]]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "numpy.ndarray"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(l.data.shape)\n",
-    "print(l.data)"
+    "type(l.data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(121, 9)"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "l.data.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[  1.20000000e+01,   1.01780000e+02,   8.83000000e-01, ...,\n",
+       "          5.04999000e+04,   1.00592000e+02,   8.22680000e+02],\n",
+       "       [  1.20500000e+01,   1.01738000e+02,   8.83000000e-01, ...,\n",
+       "          5.04999000e+04,   1.00510000e+02,   8.10824000e+02],\n",
+       "       [  1.21000000e+01,   1.01738000e+02,   8.73000000e-01, ...,\n",
+       "          5.04999000e+04,   1.00580000e+02,   8.01439000e+02],\n",
+       "       ..., \n",
+       "       [  1.79000000e+01,   1.01241000e+02,   1.41700000e+00, ...,\n",
+       "          5.04999000e+04,   1.00537000e+02,   6.88347000e+01],\n",
+       "       [  1.79500000e+01,   1.01235000e+02,   1.37800000e+00, ...,\n",
+       "          5.04999000e+04,   1.00558000e+02,   6.93289000e+01],\n",
+       "       [  1.80000000e+01,   1.01259000e+02,   1.38100000e+00, ...,\n",
+       "          5.04999000e+04,   1.00562000e+02,   6.53776000e+01]])"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "l.data"
    ]
   },
   {
